public/frontend/src/components/rec-resource/card/RecResourceCard.scss
@import '@/styles/variables.scss';
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins/_breakpoints';

.rec-resource-card {
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  background-color: $white;
  margin-bottom: 16px;
  overflow: hidden;

  @include media-breakpoint-up(sm) {
    flex-direction: row;
    height: 200px;
  }

  .card-image-container {
    width: 30%;
    min-width: 250px;
    height: 200px;

    @include media-breakpoint-down(sm) {
      width: 100%;
      height: 280px;
    }
  }

  .rec-resource-card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 16px;
    width: 70%;
  }

  .rec-resource-card-info {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  .card-content-lower {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;

    & .icon-container {
      width: 85px;
    }

    @include media-breakpoint-up(md) {
      flex-direction: row;
      align-items: center;
    }
  }
}

.card-heading-text {
  display: flex;
  align-items: center;
  // Unfortunate use of important since bootstrap theme is using it
  font-size: 1.25rem !important;
  color: $colorBlue;
  margin-bottom: 8px;
  text-transform: capitalize;
}

.card-heading-icon {
  width: 1rem;
  height: 1rem;
  margin-left: 8px;
}

.carousel-container {
  width: 100%;

  @include media-breakpoint-up(sm) {
    height: 200px;
    width: 250px;
  }
}

.card-carousel {
  min-height: 190px;
  max-height: 280px;
  overflow: hidden;
}

.carousel-desktop-image {
  display: none;
  object-fit: cover;

  @include media-breakpoint-up(sm) {
    display: block;
  }
}

.carousel-mobile-image {
  display: block;
  min-width: 100%;
  min-height: 280px;
  object-fit: cover;

  @include media-breakpoint-up(sm) {
    display: none;
  }
}

.carousel .carousel-indicators button {
  border: none;
  border-radius: 6px;
  height: 6px;
  width: 6px;
}

.nav-icon {
  font-size: 1.5rem;
  display: none;
  color: $white;
}

.card-carousel:hover .nav-icon {
  display: block;
}

